[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/powerups/art/explosion_cloud.png" type="Texture" id=1]
[ext_resource path="res://player/powerups/Explosion.gd" type="Script" id=2]
[ext_resource path="res://player/powerups/audio/nuke.wav" type="AudioStream" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.941176, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.5
angular_velocity = 10.0
angular_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 0.5
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=6]
radius = 0.01

[node name="Explosion" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
z_index = 10
emitting = false
lifetime = 3.0
one_shot = true
explosiveness = 0.7
process_material = SubResource( 5 )
texture = ExtResource( 1 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0
pitch_scale = 0.5
bus = "SoundEffects"

[node name="ExplosionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Explosion_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
